# CMakeList.txt : CMake project for BinarySearchTree, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("BinarySearchTree")

# Add source to this project's executable.
add_executable (BinarySearchTree "BinarySearchTree.cpp" "BinarySearchTree.h" "SequenceST.h" "FileOps.h")

# TODO: Add tests and install targets if needed.
